# embedded-system-models

./: dir_configs.py  pyproject.toml  readme.md
.github/workflows/: deploy.yaml
docker/: Dockerfile
docker/entrypoints/: entrypoint_flask_app.sh
local/: ec2_training.py  flask_app_client.py  run_convert_tensors.py  run_resnet_training.py  training.py  training_struct.py
local/docker_commands/: build_image.sh  run_image.sh
local/run_exported_models/: run_model.py
model_repository/: tiny_albert_spam_detector_352k_wt_10_1_v1.onnx
src/common/: base_model.py  base_model_config.py
src/export_model/: inference.py  inference_lightning_model.py
src/feature_engineering/: base_feature_config.py  convert_tensors.py  data_preprocessing.py  hg.py
src/models/: bert_cased.py
src/models/common/: base_augmentations.py  base_data_config.py  base_datamodule.py  base_dataset.py  base_loss.py  base_model.py  base_model_config.py
src/models/resnet/: resnet_configs.py  resnet_entrypoint.py  resnet_full_config.py
src/models/resnet_entrypoints/: resnet_entrypoint.py
src/models/transformers_model/: app.py  data_module.py  entypoint_tf_model.py  eval_model.py  export_model.py  inference_exported_model.py  inference_lightning_model.py  model.py  preprocess.py
src/pytorch_model_framework/: io_strategy.py  utils.py
src/pytorch_model_framework/model/: model_configs.py  model_driver.py  model_utils.py
tests/test_common/: test_base_augmentations.py  test_base_data_module.py  test_base_model.py
tests/test_feature_engineering/: test_base_feature_config.py
tests/test_models/test_common/: test_base_data_module.py  (+3 more)
(+5 files in other folders)
