[tool.poetry]
name = "embdedded-system-models"
version = "0.1.0"
description = ""
authors = ["motiram <moti@playai.network>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
pytorch-lightning = "^2.4.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
pillow = "^11.0.0"
scikit-learn = "^1.5.2"
boto3 = "^1.35.64"
tensorboard = "^2.18.0"
transformers = "^4.46.3"
datasets = "2.8.0"
accelerate = "^0.20.0"
onnx = "^1.17.0"
numpy = "1.24.0"
onnxruntime = "^1.20.1"
flask = "^3.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
